# animated-stickers

./: 0 - AE - Mask Layers.jsx  0 - AE - Prepare For Render.jsx  0 - AE - Set Up Layers.jsx  0 - AE - Set Up.jsx  0 - Adobe Illustrator.js  0 - PS - Create Fill Layers.js  0 - PS - Fix NowAndLater.js  0 - PS - Fix Thin Lines.js  0 - PS - Split to Layers.js  README.md  package-lock.json  package.json  tsconfig.json
pawtrace/: .gitignore  Cargo.toml  README.md
pawtrace/examples/: perf.rs  uishot.rs
pawtrace/fixtures/: blushiboi.psd  fingagun.psd  gradient.psd  happy king.psd  mad king.psd  pawtrace.toml  seff_deer_a.psd  seff_deer_b.psd
pawtrace/fixtures/golden/: digests.toml  stats.toml
pawtrace/fixtures/visual/: subsets.toml
pawtrace/fixtures/visual/golden/: counts.toml
pawtrace/src/: color.rs  config.rs  fit.rs  lib.rs  main.rs  output.rs  palette.rs  paths.rs  pipeline.rs  profiles.rs  psd_import.rs  raster.rs  regions.rs  seams.rs  timing.rs  trace.rs
pawtrace/src/gui/: app.rs  doc.rs  edit_target.rs  fields.rs  ids.rs  mod.rs  msg.rs  profile_ops.rs  recents.rs  snapshot.rs  view.rs  worker.rs
pawtrace/src/gui/compute/: artifact.rs  cache.rs  full.rs  memo.rs  mod.rs  render.rs  shape_memo.rs  stages.rs
pawtrace/src/gui/compute/stages/: contours.rs  detect.rs  fit.rs  mod.rs  plan.rs  prep.rs  regions.rs  remap.rs  shapes.rs  simplify.rs
pawtrace/src/gui/overlays/: anchors.rs  fates.rs  hit.rs  mod.rs  pins.rs  seams.rs
pawtrace/src/gui/phases/: colors.rs  curves.rs  mod.rs  paint.rs  shapes.rs
pawtrace/src/gui/tools/: heat.rs  lock.rs  mod.rs  pin.rs  protect.rs  select.rs
pawtrace/src/gui/undo/: apply.rs  mod.rs  record.rs  tests.rs
pawtrace/src/gui/update/: canvas.rs  compute.rs  edit.rs  file.rs  layer.rs  mod.rs  profile.rs  recent.rs  ui.rs
pawtrace/src/gui/view/: anim.rs  canvas_toolbar.rs  checkerboard.rs  failure.rs  icons.rs  library.rs  menu_bar.rs  mod.rs  overlays.rs  preview.rs  spinner.rs  status_bar.rs  strip.rs  tabs.rs  theme.rs  tool_rail.rs  vector.rs  viewport.rs  welcome.rs  widgets.rs
pawtrace/src/gui/view/inspector/: mod.rs  section.rs  setting.rs  stage2.rs  stage3.rs  stage4.rs  stage5.rs
pawtrace/src/gui/view/layers/: chip.rs  mod.rs  row.rs
pawtrace/src/palette/: cleanup.rs  common.rs  detect.rs  merge.rs  mod.rs  remap.rs  residue.rs  select.rs  smooth.rs
pawtrace/tests/: digests.rs  golden.rs  visual.rs
pawtrace/tests/common/: font.rs  mod.rs  vello_render.rs
