[package]
name = "pawtrace"
version = "0.1.0"
edition = "2021"
description = "Headless Image Trace replacement for sticker art: PSD/PNG -> per-layer vectors -> Tailmovin JSON / SVG / PDF"

[dependencies]
image = "0.25"
psd = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
rayon = "1"
fast_image_resize = "5"
# Tracing backend — pure Rust (vtracer's engine). VERIFY exact API against docs.rs.
visioncortex = "0.8"

[[example]]
name = "perf"
required-features = ["preview"]

[[example]]
name = "uishot"
required-features = ["uishot"]

[features]
default = []
gui = ["dep:iced", "dep:iced_aw", "dep:rfd", "dep:resvg", "dep:lru", "iced/web-colors"]
pdf = ["dep:svg2pdf", "dep:usvg"]
preview = ["dep:resvg"]
# Headless snapshotting of the GUI: pulls in iced_test's software renderer and
# exposes the app state and its view tree to the `uishot` example.
uishot = ["gui", "dep:iced_test"]

[dependencies.iced]
version = "0.14"
optional = true
features = ["image", "tokio", "canvas", "advanced"]

[dependencies.iced_aw]
version = "0.14"
optional = true
default-features = false
features = ["menu", "context_menu", "drop_down"]

[dependencies.rfd]
version = "0.15"
optional = true

[dependencies.lru]
version = "0.12"
optional = true

[dependencies.svg2pdf]
version = "0.13"
optional = true

[dependencies.usvg]
version = "0.45"
optional = true

[dependencies.resvg]
version = "0.45"
optional = true

[dependencies.iced_test]
version = "0.14"
optional = true

# The full trace + rasterize pipeline is unusably slow at opt-level 0, so
# optimize the crate under test and its dependencies for `cargo test`.
[profile.test]
opt-level = 2

[profile.test.package."*"]
opt-level = 2
